# api/api.go
@@ -47,6 +47,9 @@ func SetupTickersAPI(engine *gin.Engine, tickers controllers.TickersController, 
 	engine.GET("v2/market/ticker/:id",
 		middleware.CacheControl(d, endpoint.GetTickerHandlerV2(tickers)))
 
+	engine.GET("v2/market/tickers/",
+		middleware.CacheControl(d, endpoint.GetTickersHandlerV2(tickers)))
+
 	engine.GET("v2/market/tickers/:assets",
 		middleware.CacheControl(d, endpoint.GetTickersHandlerV2(tickers)))
 
